# chat_with_patent

./: .gitignore  LICENSE  README.md  packages.txt  pyproject.toml  requirements.txt
app/: llm.py  main.py  patent_download.py  sidebar.py
